hphp/hack/test/typecheck/function_pointer/class_const_dollar_dollar_bad.php
<?hh

final class Foo {
  public static function bar(int $x): void {}
}

function baz(): void {
  $x = Foo::class |> $$::bar<>;
  $x('hello');
}
